# serial-port-tools

./: .gitignore  CMakeLists.txt  LICENSE  README
plugin_demo/: CMakeLists.txt  dynamic_threshold.c
src/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
src/ccd/: ccd_tab.cpp  ccd_tab.h  ccd_tab.ui  pic_view.cpp  pic_view.h
src/com/: com_tab.cpp  com_tab.h  com_tab.ui
src/linear_ccd/: line_view.cpp  line_view.h  linear_ccd_tab.cpp  linear_ccd_tab.h  linear_ccd_tab.ui  wave_view.cpp  wave_view.h
src/main_window/: about_dialog.cpp  about_dialog.h  about_dialog.ui  main_window.cpp  main_window.h  main_window.ui
src/oscilloscope/: oscilloscope_screen.cpp  oscilloscope_screen.h  oscilloscope_tab.cpp  oscilloscope_tab.h  oscilloscope_tab.ui
